Switch emoji libs